More aggressive koios usage
Signed-off-by: Alessio <slux83@gmail.com>